--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -26,8 +26,8 @@
 /* Grid-related CSS */
 
 :root {
-    --square-size: 15px;
-    --square-gap: 5px;
+    --square-size: 20px;
+    --square-gap: 10px;
     --week-width: calc(var(--square-size) + var(--square-gap));
 }
 
@@ -55,16 +55,7 @@
     grid-template-columns:
         calc(var(--week-width) * 4) /* Jan */
         calc(var(--week-width) * 4) /* Feb */
-        calc(var(--week-width) * 4) /* Mar */
-        calc(var(--week-width) * 5) /* Apr */
-        calc(var(--week-width) * 4) /* May */
-        calc(var(--week-width) * 4) /* Jun */
-        calc(var(--week-width) * 5) /* Jul */
-        calc(var(--week-width) * 4) /* Aug */
-        calc(var(--week-width) * 4) /* Sep */
-        calc(var(--week-width) * 5) /* Oct */
-        calc(var(--week-width) * 4) /* Nov */
-        calc(var(--week-width) * 5) /* Dec */;
+        calc(var(--week-width) * 4); /* Mar */
 }
 
 .days,
@@ -88,7 +79,7 @@ body {
 }
 
 .graph {
-    padding: 20px;
+    padding: 30px;
     border: 1px #e1e4e8 solid;
     margin: 20px;
 }
