fix: made branch for fix

--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -176,7 +176,7 @@ body {
 
 .carousel .background.a {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-        url("/storage/pic.png");
+        url("/storage/pic.jpg");
 }
 
 .covertext {
