--- a/resources/css/general.css
+++ b/resources/css/general.css
@@ -177,7 +177,11 @@ body {
 }
 
 .navbar-background {
-    background-color: rgba(0, 0, 0, 0.6);
+    background: linear-gradient(
+        45deg,
+        rgba(159, 122, 234, 0.7),
+        rgba(96, 165, 250, 0.5)
+    );
 }
 
 @media (max-width: 991px) {
@@ -466,3 +470,5 @@ figure {
 #AboutUs {
     padding: 2rem;
 }
+
+/*DASHBOARD*/
